Ein Anhang wurde hinzugefuegt und das Transcript von Chris Rahles eingepflegt

--- a/main.tex
+++ b/main.tex
@@ -79,12 +79,20 @@
 
 \newpage
 
+\pagenumbering{Roman}
+\appendix
+
+\input{sections/Anhang}
+\newpage
+
 % Literaturverzeichnis
+\addcontentsline{toc}{section}{Literaturverzeichnis}
 \printbibliography[title=Literaturverzeichnis]
 
 \newpage
 
 % Abbildungsverzeichnis
+\addcontentsline{toc}{section}{Abbildungsverzeichnis}
 \listoffigures
 
 \newpage
