--- a/sections/Methodik.tex
+++ b/sections/Methodik.tex
@@ -3,10 +3,7 @@
 
 %Todo Text über das ermitteln der Bedingungen anhand der Literaturrecherche einfügen
 
-Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit ihre Softwarearchitektur ändern kann, wurde eine Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um in Ermangelung der wenigen Literatur eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Weiterführend wurde sich für ein semi-strukturiertes Interview entschieden, um zum einen subjektive, als auch vergleichbare Erkenntnisse zu erhalten.
-
-Anschließend werden die Erkenntnisse in \cref{sec:auswertung} diskutiert.
-%Todo ggf. die Zeitform oder den Satz löschen
+Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit ihre Softwarearchitektur ändern kann, wurde eine Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um in Ermangelung der wenigen Literatur eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Weiterführend wurde sich für ein semi-strukturiertes Interview entschieden, um zum einen subjektive Erfahrungen, als auch vergleichbare Erkenntnisse zu erhalten.
 
 \input{sections/Methodik/interviewfragen}
 
