--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -10,6 +10,6 @@ Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Ve
 
 Nach der Begrüßt und dem Hinweis, dass es sich um ein Aufgezeichnetes Gespräch handelt, begann das Interview mit folgender Frage: 
 
-\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Software Architektur zu einer Microservice-Architektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
+\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Software Architektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
 Diese Frage zielte darauf ab, zum einen die zur grundlegende Annahme, dass es Bedingungen gibt, zu beantworten, als auch ein ersten Einblick von diesen Bedingungen zu erhalten. Die Frage war möglichst offen gestellt, um den Experten die Möglichkeit voreingenommen zu antworten.
