--- a/sections/eidesstattliche.tex
+++ b/sections/eidesstattliche.tex
@@ -1,3 +1,4 @@
+\addcontentsline{toc}{section}{Erklärung der Urheberschaft}
 \section*{Erklärung der Urheberschaft}
 
 Ich erkläre hiermit an Eides statt, dass ich die vorliegende Arbeit
