--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -6,7 +6,7 @@ Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtl
 
 Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
 
-Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z.B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z.B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
+Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z. B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z. B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
 
 Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform. Die Entscheidung für das Medium Tonaufnahme wurde bewusst getroffen, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
 
@@ -21,8 +21,8 @@ React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. 
 Gehostet werden die Applikationen über den Cloud-Computing-Anbieter Amazon Web Services\footnotemark (AWS).
 \footnotetext{AWS ist ein Tochterunternehmen des Online-Versandhändlers Amazon mit einer Vielzahl an Diensten im Bereich Cloud-Computing \parencite{amazon_homepage}.}
 
-	Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z.B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in das Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z.B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
-	Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z.B. MySQL, MariaDB und PostgreSQL \parencite[vlg.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
+	Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z. B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in das Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z. B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
+	Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z. B. MySQL, MariaDB und PostgreSQL \parencite[vlg.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
 	Bilder und Tonaufnahmen werden in einem Simple Storage Service-Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vlg.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
 	Um automatisch zu jedem Beitrag Intros zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vlg.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
 
@@ -30,12 +30,12 @@ Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Fun
 
 Diese werden jedoch nur in Teilen der Anwendung verwendet, werden allerdings zum gesamten Frontend hinzugefügt. Insgesamt verlangsamt es die Bereitstellung der Applikation, da sie während des Prozesses installiert werden müssen. Für eine schnelle Entwicklung ist es somit wichtig, einen rapiden Bereitstellungsprozess zu entwickeln und die Zahl der externen Pakete auf das Nötigste zu begrenzen.
 
-Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, hat PluraPolit beschlossen, den aktuellen Aufbau in eine Microservice-Architektur zu ändern und die gesamte Plattform in inhaltlich getrennte Module zu teilen.
+Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, hat PluraPolit beschlossen, den aktuellen Aufbau in eine Microservicearchitektur zu ändern und die gesamte Plattform in inhaltlich getrennte Module zu teilen.
 
 \subsection{Zielsetzung}
 \label{sec:zielsetzung}
 
-Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vlg.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservice-Architektur bezeichnet \parencite[vlg.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservice-Architektur beschreiben.
+Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vlg.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservicearchitektur bezeichnet \parencite[vlg.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservicearchitektur beschreiben.
 
 Trotz der Informationslage ist jedoch noch relativ unbekannt, ob auch Start-ups Microservices umsetzen können und welche Bedingungen dafür erforderlich wären. Es gibt kaum Erfahrungen, die es PluraPolit ermöglichen abzuschätzen, ob sich eine Umstellung zum aktuellen Zeitpunkt lohnt und welche Eigenschaften ein Unternehmen erfüllen muss.
 
@@ -51,7 +51,7 @@ Die Arbeit teilt sich in drei Bereiche auf:
 	\item die Auswertung.
 \end{itemize}
 
-Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestellt. Es werden einzelne wichtige Merkmale beleuchtet und beschrieben. Zwischen der aktuellen Software-Architektur des Unternehmens und Microservices wird ein Vergleich erstellt. Aus den Merkmalen und der Gegenüberstellung werden wichtige Bedingungen für die Umstellung zu einer Microservice-Architektur abgeleitet, welche Grundlage für die Einschätzung sind.
+Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestellt. Es werden einzelne wichtige Merkmale beleuchtet und beschrieben. Zwischen der aktuellen Software-Architektur des Unternehmens und Microservices wird ein Vergleich erstellt. Aus den Merkmalen und der Gegenüberstellung werden wichtige Bedingungen für die Umstellung zu einer Microservicearchitektur abgeleitet, welche Grundlage für die Einschätzung sind.
 
 Im nächsten Abschnitt werden diese Bedingungen im Rahmen einer qualitativen Befragung von Experten im Bereich Microservices eingeschätzt und bewertet. Hierfür werden Interviews durchgeführt. Es wird beschrieben, welche Experten ausgewählt werden und welche Expertise sie mitbringen. Die einzelnen Interviewfragen werden vorgestellt und deren Zusammenhang zur Zielsetzung erklärt. Dadurch wird deutlich, welchen Einfluss die Expertenaussagen auf die Einschätzung für PluraPolit haben.
 
