--- a/sections/Methodik.tex
+++ b/sections/Methodik.tex
@@ -3,7 +3,7 @@
 
 %Todo Text über das ermitteln der Bedingungen anhand der Literaturrecherche einfügen
 
-Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit ihre Softwarearchitektur ändern kann, wurde eine Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um in Ermangelung der wenigen Literatur eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Weiterführend wurde sich für ein semi-strukturiertes Interview entschieden, um zum einen subjektive Erfahrungen, als auch vergleichbare Erkenntnisse zu erhalten.
+Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit seine Softwarearchitektur ändern kann, wurden Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um trotz der wenigen Literatur, die es zu diesem Thema gibt, eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Es wurde sich für ein Leitfadeninterview entschieden, um sowohl subjektive Erfahrungen zu erhalten, als auch die Antworten vergleichen zu können.
 
 \input{sections/Methodik/interviewfragen}
 
