--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,14 +1,15 @@
 \subsection{Durchführung des Interviews}
 
 Um eine qualitative Bewertung über die Bedingungen, die für PluraPolit für eine Umstellung notwenig sind, zu erhalten, sollten semi-strukturierte Interviews mit fünf Experten durchgeführt werden. Die Experten sollten dabei Kenntnisse im Erstellen von Microservices ausweisen, sowie jahrelange Berufserfahrung in der Start-up-Branche haben und die Softwarearchitektur von PluraPolit kennen. So stellte sich jedoch heraus, dass nur zwei der ursprünglich ausgesuchten Experten, diese Anforderungen erfüllten. Demnach wurde nur mit Christoph Rahles und Alex Troppman ein Interview durchgeführt. Die Experten kennen sich untereinander nicht, sodass ihre Antworten unabhängig von einander gegeben wurde.
+% Todo: Entscheiden - Soll ich den ersten Absatz wegnehmen, da er sich zu stark doppelt?
 
-Beide Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kotaktbeschrenkungen in der Coronapandemie einzuhalten. Hinzu kann das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
+Beide Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
 
-Beiden Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden beide vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transcripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde unmittelbar vor der Aufzeichnung sich vor beiden Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
+Beiden Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden beide vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wurde, um die anschließende Transcripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde sich von den Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
 
-Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Vereinzelnd wurden dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
+Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Vereinzelt wurde dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
 
-Nach der Begrüßt und dem Hinweis, dass es sich um ein Aufgezeichnetes Gespräch handelt, begann das Interview mit folgender Frage: 
+Das Interview startete mit folgender Frage:
 
 \textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Software Architektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
