--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -1,6 +1,9 @@
 \subsection{Auswahl der Experten}
 
-Für das Experteninterview wurden Christoph Rahles und Alexander Troppman befragt. Es wurde sich für sie entschieden, da beide jahrelange Expertise im Bereich der Microservicearchitektur haben und seit vielen Jahren in der Start-up-Branche arbeiten. Sowohl Herr Rahles, als auch Herr Troppman sind Senior Software Developer mit Erfahrungen im Management. So haben beide mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppman Vorträge in denen er erklärt, wie mit Hilfe mit Golang leichtgewichtige Microservices erstellt werden können.
+Für das Experteninterview wurden Christoph Rahles, Alexander Troppman und Sebastian Schlaak befragt. Es wurde sich für sie entschieden, da alle drei jahrelange Erfahrung im Bereich der Microservicearchitektur haben und seit vielen Jahren in der Start-up-Branche arbeiten. Sowohl Herr Rahles, Herr Troppman und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppman Vorträge in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
 
-Des Weiteren wurden beide ausgewählt, da sie PluraPolit kennen und zum Teil bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase von PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
+Des Weiteren wurden alle drei ausgewählt, da sie PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
+
 Mit Herrn Trapper hat PluraPolit erst vor kurzen gemeinsam in einem Hackathon gearbeitet. Bei diesem wurde die Plattform konzeptionell weiter entwickelt, sodass sie auch für den Schulunterricht eingesetzt werden kann. Folglich kennt auch Herr Troppman den aktuellen Stand der Bildungsplattform.
+
+%Todo hier muss noch ein Text darüber eingefügt werden, welche Verbindung es zu Herr Schlaak gibt.
