Die Durchfuehrung und Auswertung im Methodik Abschnitt wurde weiter beschrieben

--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -6,7 +6,7 @@ Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtl
 
 Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
 
-Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z. B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z. B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
+Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer (Robin Zuschke) bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z. B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z. B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
 
 Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform. Die Entscheidung für das Medium Tonaufnahme wurde bewusst getroffen, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
 
