--- a/sections/Methodik/analyse.tex
+++ b/sections/Methodik/analyse.tex
@@ -1,4 +1,9 @@
 \subsection{Methodik zur Auswertung}
 
-Beispiel:
-Die Interviews mit den Bewohnern von Gebäude X wurden transkribiert. Die Transkripte wurden anschließend offen und axial codiert, um diese Daten quantitativ in SPSS analysieren zu können. Danach wurden die Daten mithilfe einer Regressionsanalyse untersucht, um eine Antwort auf die Forschungsfrage zu erhalten.
+Um die Interviews zu transkribieren, wurde der Dient \textit{Amazon Transcribe} von Amazon Web Services verwendet. Es handelt sich bei um ein Service, der automatisch, Audioaufzeichnungen in Text, konvertiert und diesen zurück gibt.
+
+Nach dem automatischen Transkribieren wurden die Texte noch einmal korrigiert und überprüft.
+
+Die einzelnen Aussagen aus den Interviews wurden offen codiert und anschließend in Themen zusammengefasst. Darauf folgend wurden diese Themen einzelnen Kategorien zugeordnet und sie weiterführend besser vergleichen zu können.
+
+Abschließend wurden die Informationen aus den Interviews mit den Ergebnissen der Literaturrecherche verglichen und zu Erkenntnissen zusammengefasst. Mit Hilfe dieser Erkenntnissen wurde abschließend die Forschungsfrage beantwortet.
