--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -6,4 +6,8 @@ Des Weiteren wurden alle drei ausgewählt, da sie PluraPolit kennen und bei der 
 
 Mit Herrn Trapper hat PluraPolit erst vor kurzen gemeinsam in einem Hackathon gearbeitet. Bei diesem wurde die Plattform konzeptionell weiter entwickelt, sodass sie auch für den Schulunterricht eingesetzt werden kann. Folglich kennt auch Herr Troppman den aktuellen Stand der Bildungsplattform.
 
-%Todo hier muss noch ein Text darüber eingefügt werden, welche Verbindung es zu Herr Schlaak gibt.
+Mit Herrn Schlaak stand PluraPolit gelegentlich im Austausch. Sowohl ich als auch Robin Zuschke haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und sind seitdem im freundschaftlichen Kontakt. Folglich kannte Herr Schlaak PluraPolit. 
+
+Auch kannten sich Herr Schlaak und Herr Rahles vor dem Interview. Sie haben von 2011 bis 2013 gemeinsam bei Käuferportal gearbeitet und sind seitdem befreundet. Es wurde jedoch darauf geachtet, dass sie sich vor den Interviews nicht austauschen und ihre Antworten unabhängig gegeben wurden.
+
+Ausgenommen der Verbindung zwischen Herrn Rahles und Herrn Schlaak, kannten sich die Experten nicht.
