--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,16 +1,59 @@
 \subsection{Durchführung des Interviews}
 
-Um eine qualitative Bewertung über die Bedingungen, die für PluraPolit für eine Umstellung notwenig sind, zu erhalten, sollten semi-strukturierte Interviews mit fünf Experten durchgeführt werden. Die Experten sollten dabei Kenntnisse im Erstellen von Microservices ausweisen, sowie jahrelange Berufserfahrung in der Start-up-Branche haben und die Softwarearchitektur von PluraPolit kennen. So stellte sich jedoch heraus, dass nur zwei der ursprünglich ausgesuchten Experten, diese Anforderungen erfüllten. Demnach wurde nur mit Christoph Rahles und Alex Troppman ein Interview durchgeführt. Die Experten kennen sich untereinander nicht, sodass ihre Antworten unabhängig von einander gegeben wurde.
-% Todo: Entscheiden - Soll ich den ersten Absatz wegnehmen, da er sich zu stark doppelt?
+Die drei Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
 
-Beide Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
+Alle drei Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden sie vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde sich von den Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
 
-Beiden Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden beide vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wurde, um die anschließende Transcripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde sich von den Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
+Während der Interviews wurden Notizen erstellt, um die Antworten zu erfassen. Vereinzelt wurde dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
 
-Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Vereinzelt wurde dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
+Die Interviews wurden nacheinander gehalten. Das erste Interview wurde mit Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppman am 21 Juni und Sebastian Schlaak am 24 Juni. 
 
-Das Interview startete mit folgender Frage:
+In allen drei Fällen hat das Interview mit folgender Frage gestartet:
 
-\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Software Architektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
+\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservicearchitektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
-Diese Frage zielte darauf ab, zum einen die zur grundlegende Annahme, dass es Bedingungen gibt, zu beantworten, als auch ein ersten Einblick von diesen Bedingungen zu erhalten. Die Frage war möglichst offen gestellt, um den Experten die Möglichkeit voreingenommen zu antworten.
+Mit dieser Frage sollte die Annahme beantwortet werden, dass es überhaupt Bedingungen gibt. Weiterführend sollte den Experten die Möglichkeit gegeben werden, ohne jegliche Einschränkung notwendige Bedingungen zu nennen.
+
+In zwei der drei Interviews (Christoph Rahles und Alexander Troppman) wurde nach der ersten Frage die vierte Frage eingeschoben. Dies bot sich an, da beide Experten in ihren Antworten sich thematisch dieser Fragestellung angenähert haben.
+
+Als zweite Frage im Fall von Herrn Schlaak, bzw. als dritte Frage im Fall von Herrn Rahles und Troppman, wurde folgendes gestellt:
+
+\textit{Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat von einander Arbeiten können?}
+
+Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, dass Microservices es Teams ermöglichen unabhängig von einander an unterschiedlichen Services zu arbeiten.
+
+Diese Zusammenfassung wurde eingeschoben, um zum einen den Experten die Möglichkeit zu geben, die Annahme zu berichtigen und sich bei ihren Antworten darauf zu beziehen.
+
+Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
+\begin{enumerate}
+	\item Teams eigenverantwortlich arbeiten und
+	\item ausschließlich über die Schnittstellen auf Informationen zu greifen.
+\end{enumerate}
+Es wurde sich für eine möglichst offene Frage entschieden, um die Relevant dieser Hypothese zu ermitteln.
+
+Anschließend zur Frage zwei wurde Frage drei gestellt:
+
+\textit{Gibt es in ihren Augen irgendwelche technischen Anforderungen die PluraPolit erfüllen sollte? }
+
+Diese Frage wurde gestellt, um Bedingung fünf, sechs und sieben zu überprüfen (siehe \cref{sec:bedingungen}). Demnach wurde erwartet, dass ein Netzwerk: 
+
+\begin{enumerate}
+	\item die Kommunikation zwischen den Services ermöglicht,
+	\item Zugriffe verwaltet und
+	\item ein hohen Datendurchsatz besitzt.
+\end{enumerate}
+
+Die Frage wurde möglichst offen gestellt, sodass die Experten ihre Erfahrung einbringen konnten und weitere Anforderungen nennen.
+
+Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umgeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
+
+\textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sie durch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
+
+Die Zusammenfassung wurde eingefügt, um den Schwerpunkt der Fragestellung auf die Phasen eines Start-up zu lenken.
+Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, wurde im Interview nachgefragt.
+
+Abschließend wurde das Interview mit folgender Frage beendet:
+
+\textit{Mit Ihrem aktuellen Wissensstand, welche Softwarearchitektur empfehlen Sie PluraPolit?}
+
+Es wurde sich für diese Frage entschieden, um die Antworten mit den Antworten der vorhergehenden Fragen auf Einheitlichkeit zu überprüft und eine Einschätzung für PluraPolit zu geben.
